--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             
               // Avatar Options
               avatarSize: 40,
-              botAvatarBackgroundColor: undefined, // defaults to accent color
-              botAvatarImage: 'nina.jpg',
-              botAvatarInitials: 'Bot',
+              botAvatarBackgroundColor: "White", // defaults to accent color
+              botAvatarImage: 'logo.png',
+              botAvatarInitials: 'Me',
               userAvatarBackgroundColor: undefined, // defaults to accent color
               userAvatarImage: '',
               userAvatarInitials: 'You',
@@ -184,7 +184,7 @@
             };
 
             // Add your BOT ID below
-            var BOT_ID = "#{botidtoken}#"; 
+            var BOT_ID = #{botidtoken}#"; 
             var theURL = "https://powerva.microsoft.com/api/botmanagement/v1/directline/directlinetoken?botId=" + BOT_ID;
 
             const store = window.WebChat.createStore(
