--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             };
 
             // Add your BOT ID below
-            var BOT_ID = #{botidtoken}#"; 
+            var BOT_ID = "#{botidtoken}#"; 
             var theURL = "https://powerva.microsoft.com/api/botmanagement/v1/directline/directlinetoken?botId=" + BOT_ID;
 
             const store = window.WebChat.createStore(
